--- a/Tareas Semanales/TS1.ipynb
+++ b/Tareas Semanales/TS1.ipynb
@@ -78,7 +78,15 @@
    "source": [
     "2) \n",
     "Para normalizar tomamos primero que $\\frac{1}{R3C} = wo$  y tomo wo como el factor de normalizacion de la frecuencia. Ahora defino  $\\frac{s}{wo} = s'$  y la ganancia normalizada queda $ Av(s')= \\frac{s' - \\frac{R2}{R1}}{s' +1}$  De aqui se puede observar que la naturlaeza del filtrado dependera de la relacion R2 y R1. \n",
-    "Para la normalizacion de la impedancia propongo $\\frac{R2}{R1} = 1$ . Enconces finalmente nos quedaria que la gancia normalizada es $ Av(s')= \\frac{s' - 1}{s' +1}$\n"
+    "Para la normalizacion de la impedancia propongo que la norma sea R3. Entonces tendriamos que \n",
+    "$R1' = \\frac{R1}{R3}$\n",
+    "$R2'= \\frac{R1}{R3}$\n",
+    "$C'= \\frac{1}{R3}$\n",
+    "$R3'=1$\n",
+    "\n",
+    "Entonces la transferencia queda $ Av(s')= \\frac{s' - \\frac{R2'}{R1'}}{s' +1}$\n",
+    "\n",
+    "Para analizar en filtro pasabanda necesitamos que $\\frac{R2}{R1} = 1$ que eso tambien se traduciria en $\\frac{R2'}{R1'} = 1$ . Enconces finalmente nos quedaria que la gancia normalizada es $ Av(s')= \\frac{s' - 1}{s' +1}$\n"
    ]
   },
   {
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a3f4c4ed",
    "metadata": {},
    "outputs": [
@@ -205,7 +213,8 @@
    "id": "75de69ab",
    "metadata": {},
    "source": [
-    "5) La utilidas que pueden tener estos circuitos pasa todos es que nos permiten modificar a todo el espectro de la señal. Por ejemplo si queremos amplificar o atenuar a toda la señal se podria diseñar para que la transferencia quede multiplicada por una constante que cuando se haga el bode la transferencia del pasatodos quede en un cierto nivel de db."
+    "5) La utilidas que pueden tener estos circuitos pasa todos es que nos permiten modificar a todo el espectro de la señal. Por ejemplo si queremos amplificar o atenuar a toda la señal se podria diseñar para que la transferencia quede multiplicada por una constante que cuando se haga el bode la transferencia del pasatodos quede en un cierto nivel de db.\n",
+    "Otra utilidad y para lo que generalmente se utiliza es para retrasar la fase pi. Esto es mas que la mayoria de los circuitos ya que al tener el cero en el semiplano derecho deja que tengamos maximo refraso de fase, Esto sirve para corregir el retardo del grupo si una etapa anterior o posterior nos trae problemas. Entonces modemos modificar la transferencia sin modificar el modulo."
    ]
   },
   {
