--- a/Tareas Semanales/TS1.ipynb
+++ b/Tareas Semanales/TS1.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "Entonces la transferencia queda $ Av(s')= \\frac{s' - \\frac{R2'}{R1'}}{s' +1}$\n",
     "\n",
-    "Para analizar en filtro pasabanda necesitamos que $\\frac{R2}{R1} = 1$ que eso tambien se traduciria en $\\frac{R2'}{R1'} = 1$ . Enconces finalmente nos quedaria que la gancia normalizada es $ Av(s')= \\frac{s' - 1}{s' +1}$\n"
+    "Para analizar en filtro pasatodos necesitamos que $\\frac{R2}{R1} = 1$ que eso tambien se traduciria en $\\frac{R2'}{R1'} = 1$ . Enconces finalmente nos quedaria que la gancia normalizada es $ Av(s')= \\frac{s' - 1}{s' +1}$\n"
    ]
   },
   {
